# Introduction-to-data-science

./: .gitignore  README.md  main.py  pyproject.toml
UZOP_Projekt_1/: Galic_Fran_0036546889_1.ipynb  UZOP2025_Projekt_1.ipynb  climate_change_impact_on_agriculture_2025.csv
UZOP_Projekt_2/: Galic_Fran_0036546889_projekt2.ipynb
UZOP_Projekt_2/processed_data/: early_predictors_final.csv  early_predictors_final.parquet  early_predictors_ml.parquet  early_predictors_ml_transformations.txt
UZOP_Projekt_3/: Galic_Fran_0036546889_projekt3.ipynb
